Fixed issue with courses width on mobile devices.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -436,7 +436,7 @@ footer span {
     nav img {
         display: inline-block;
         margin-left: 60px;
-        margin-top: -5px;
+        margin-top: 5px;
         height: 2.3rem;
     }
     
@@ -523,15 +523,9 @@ footer span {
         height: 2.1rem;
     }
     
-    
-    
-    nav .mobile {
-        justify-content: space-around;
-    }
-    
     nav img {
         display: inline-block;
-        margin: -10px 0 0 55px;
+        margin-top: 5px;
         height: 1.8rem;
     }
     
@@ -630,6 +624,7 @@ footer span {
     .course-container {
         background-color: #D8D8D8;
         width: 100%;
+        max-width: 550px;
     }
     
     /* thesis section */
